--- a/config-client.properties
+++ b/config-client.properties
@@ -1,1 +1,1 @@
-configuration.projectName=koboid-web configuration via Spring Cloud
+configuration.projectName=koboid-web configuration properties via Spring Cloud
